          been removed, which was deprecated since v257.

        * systemd-networkd now supports configuring the timeout for IPv4
          Duplicate Address Detection via a new setting
          IPv4DuplicateAddressDetectionTimeoutSec=. The default timeout value
          has been changed from 7 seconds to 200 milliseconds.

        * Support for the !! command line prefix on ExecStart= lines (and
          related) has been removed, and if specified will be ignored. The
          concept was supposed to provide compatibility with kernels that
          predated the introduction of "ambient" process capabilities. However,
          the kernel baseline of the systemd project is now far beyond any
          kernels that lacked support for it, hence the prefix serves no
          purpose anymore.

        Announcements of Future Feature Removals:

        * Support for System V service scripts is deprecated and will be
          removed in v259. Please make sure to update your software
          *now* to include a native systemd unit file instead of a legacy
          System V script to retain compatibility with future systemd releases.

        * Support for systemd-repart's FactoryReset EFI variable has been
          deprecated and support for it will be removed in v260. Use the newer,
          more generic FactoryResetRequest variable instead, which can be
          managed by "systemd-factory-reset request" and "systemd-factory-reset
          complete".

        * The meson option 'integration-tests' has been deprecated, and will be
          removed in a future release.

        Service manager/PID1:

        * The PrivateUsers= unit setting now accepts a new value "full", which
          is similar to "identity", but maps the whole 32bit UID range instead
          of just the first 2¹⁶.

        * The ProtectHostname= unit setting now accepts a new value "private",
          which is similar to "yes", but allows the unit's processes to